--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,3 +21,115 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 }
+
+body {
+  background: #fff;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+}
+
+.form-content {
+  display: flex;
+}
+
+.form-control {
+  width: 272px;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #808080;
+  color: #808080;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.64px;
+  padding-left: 16px;
+}
+
+.btn {
+  display: flex;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  border-radius: 8px;
+  background-color: #4e75ff;
+  margin-left: 8px;
+  color: #fff;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5; /* 150% */
+  letter-spacing: 0.64px;
+  border: none;
+  transition: transform 250ms linear;
+}
+
+.btn:hover,
+.btn:focus {
+  background-color: rebeccapurple;
+}
+
+.js-image-container {
+  margin-top: 32px;
+}
+
+img {
+  display: block;
+  width: 360px;
+  height: 200px;
+}
+
+.gallery-item {
+  list-style: none;
+  padding-left: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  border: 1px solid #808080;
+  transition: transform 250ms linear;
+}
+
+.gallery-item:hover {
+  cursor: pointer;
+  transform: scale(1.05);
+}
+
+.gallery-image {
+  justify-content: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+
+.content-image {
+  display: flex;
+  justify-content: center;
+  gap: 32px;
+  padding-top: 4px;
+  padding-bottom: 4px;
+  height: 48px;
+}
+
+.pege-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #2e2f42;
+  font-family: Montserrat;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.3; /* 133.333% */
+  letter-spacing: 0.48px;
+}
+
+.hidden {
+  display: none;
+  opacity: 0;
+}
